# fido-bank-simulator

./: .dockerignore  .env.sample  .gitignore  Dockerfile  LICENSE  Makefile  README.md  Taskfile.yml  docker-compose.yml  env.sample  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile  config.py  main.py  models.py
backend/app/: config.py  main.py  models.py
backend/app/routers/: banking.py  fido.py  users.py
backend/app/services/: fido_service.py  session.py  user_store.py
backend/routers/: banking.py  fido.py  users.py
backend/services/: fido_service.py
backend/tests/: test_banking_api.py  test_fido_api.py  test_fido_service.py  test_session.py  test_user_store.py  test_users_api.py
frontend/: Dockerfile  docker-entrypoint.sh  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
frontend/public/: config.js
frontend/src/: api.js  api.test.js  main.js  webauthn.js  webauthn.test.js
frontend/src/pages/: dashboard.js  login.js
tests/app/: test_fido_service.py
tests/backend/: test_fido_service.py  test_session.py  test_user_store.py  test_users_api.py
tests/e2e/: authentication.spec.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  registration.spec.ts  tsconfig.json  user-management.spec.ts
tests/e2e/fixtures/: authenticator.ts
